[tool.poetry]
name = "py2origin"
version = "0.1.0"
description = ""
authors = ["Yukihiro <12211343+y-marui@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "py2origin"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
